fix and init readme